k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx  
  tls:
  - hosts:
    - quannv.id.vn
    secretName: blog-tls-cert
  rules:
  - host: 
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: blog-backend
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-frontend
            port:
              number: 80
